--- a/src/universidadg8/vistas/JPModificarMateria.form
+++ b/src/universidadg8/vistas/JPModificarMateria.form
@@ -63,8 +63,8 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="jlTitulo2ActualizarAlum" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jlTituloActualizarAlum" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jlTitulo2ActualizarMateria" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jlTituloActualizarMateria" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -86,11 +86,11 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jlTituloActualizarAlum" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                      <Component id="jlTituloActualizarMateria" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="JCBActualizarMateria" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jlTitulo2ActualizarAlum" min="-2" max="-2" attributes="0"/>
+                  <Component id="jlTitulo2ActualizarMateria" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="JLActualizarNombreMateria" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
@@ -114,7 +114,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jlTitulo2ActualizarAlum">
+        <Component class="javax.swing.JLabel" name="jlTitulo2ActualizarMateria">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Yu Gothic Medium" size="18" style="0"/>
@@ -122,7 +122,7 @@
             <Property name="text" type="java.lang.String" value="Datos"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jlTituloActualizarAlum">
+        <Component class="javax.swing.JLabel" name="jlTituloActualizarMateria">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Yu Gothic Medium" size="18" style="0"/>
@@ -168,6 +168,9 @@
         <Component class="javax.swing.JTextField" name="JTFActualizarAnioMateria">
         </Component>
         <Component class="javax.swing.JTextField" name="JTFActualizarIDMateria">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JTFActualizarIDMateriaActionPerformed"/>
           </Events>
