--- a/src/universidadg8/vistas/JPGuardarMateria.form
+++ b/src/universidadg8/vistas/JPGuardarMateria.form
@@ -49,7 +49,6 @@
                               <Component id="jlNombreGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                               <Component id="jlIconGuardarAlum" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                               <Component id="JFAnio" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
-                              <Component id="JLID" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
@@ -61,7 +60,6 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="JTFAñoGuardarMateria" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
                                       <Component id="JTFNombreGuardarMateria" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
-                                      <Component id="JTFIDGuardarmateria" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -90,17 +88,12 @@
                       <Component id="JTFNombreGuardarMateria" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                       <Component id="jlNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="JTFAñoGuardarMateria" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="JFAnio" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="JFAnio" min="-2" pref="28" max="-2" attributes="0"/>
+                      <Component id="JTFAñoGuardarMateria" alignment="0" min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="JTFIDGuardarmateria" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="JLID" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="156" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="JBBorrarGuardarMateria" alignment="0" pref="57" max="32767" attributes="0"/>
                       <Component id="JBGuardarGuardarMateria" alignment="0" max="32767" attributes="0"/>
@@ -121,11 +114,6 @@
             <Property name="text" type="java.lang.String" value="A&#xf1;o"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="JLID">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="ID"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="jlIconGuardarAlum">
         </Component>
         <Component class="javax.swing.JTextField" name="JTFA&#xf1;oGuardarMateria">
@@ -137,8 +125,6 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JTFNombreGuardarMateriaActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="JTFIDGuardarmateria">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
